<resources>
    <string name="app_name">Годинник</string>
    <string name="clock">Годинник</string>
    <string name="settings">Налаштування</string>
    <string name="timer">Таймер</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="pause">Пауза</string>
    <string name="resume">Продовжити</string>
    <string name="lap">Коло</string>
    <string name="timezone">Часовий пояс</string>
    <string name="select_timezone">Виберіть часовий пояс</string>
    <string name="laps">Кола:</string>
    <string name="no_laps">Немає кіл</string>
    <string name="sync_progress">Прогрес синхронізації: %d%%</string>
</resources>